ChannelService MapperComponent 적용